# 20_APS

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  benchmark-report.md  decisions.md  implementation-plan.md  requirements.md  traceability.md  wp4-report.md
docs/final-report/: APSFinale.tex  WP4.tex
src/evoting/: __init__.py  config.py  demo.py  errors.py  models.py  serialization.py  workflow.py
src/evoting/actors/: __init__.py  bulletin_board.py  commissioners.py  registration_authority.py  tallying_authority.py  verifier.py  voter.py
src/evoting/benchmarks/: __init__.py  models.py  runner.py  scenarios.py
src/evoting/crypto/: __init__.py  aead.py  encryption.py  hashes.py  password.py  (+3 more)
tests/benchmark/: test_benchmark_smoke.py
tests/integration/: test_complete_election_workflow.py  test_gui_workflow.py  test_state_loss_workflow.py  test_ta_blob_protection.py  test_tally_workflow.py  test_vote_replacement.py  test_voter_state_persistence.py
tests/security/: test_authorization_tampering.py  test_bulletin_board_tampering.py  test_crypto_tampering.py  test_public_verification.py  test_serialization_tampering.py  test_shamir_negative.py  test_tally_negative.py
tests/unit/: test_aead.py  test_bulletin_board_rules.py  test_config.py  test_encryption.py  test_gui_controller.py  test_gui_formatting.py  test_hashes.py  test_models.py  test_package.py  test_password.py  test_registration_authority.py  test_serialization.py  test_shamir.py  test_signatures.py  test_ta_blob.py  test_tallying_authority.py  test_verifier.py  test_voter_ballot.py
(+7 files in other folders)
