[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "aps-evoting"
version = "0.1.0"
description = "Simulatore didattico di un protocollo crittografico di voto elettronico"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=48.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
